mengubah animasi dan tambah link

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
                 </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
               <div class="navbar-nav">
-                <a class="nav-item nav-link active" href="#">Fitur </a>
-                <a class="nav-item nav-link" href="#">Portfolio</a>
-                <a class="nav-item nav-link" href="#">Benefits</a>
-                <a class="nav-item nav-link " href="#">Contacts</a>
+                <a class="nav-item nav-link active" href="#sc1">Home </a>
+                <a class="nav-item nav-link" href="#sc2">Layanan</a>
+                <a class="nav-item nav-link" href="#sc3">Berita</a>
+                <a class="nav-item nav-link " href="#sc4">Donasi</a>
               </div>
             </div>
           </nav>
@@ -39,23 +39,23 @@
 
 
 
-    <section class="bg-sc1">
+    <section class="bg-sc1" id="sc1">
         <div class="container">
-            <div class="row section-1 container">
-                    <div class="col-lg-6 " data-aos="fade-up">
+            <div class="row section-1 container " data-aos="fade-up">
+                    <div class="col-lg-6 " >
                         <h2><span class="tx-normal">Masjid Al - Ikhlas </h2>
                           <h5 class="tx-normal">Perum. Putri Hijau</h5>
                         <p>masjid yang berdiri sejak 2002, merupakan masjid tertua di Sagulung. Terdiri dari 400 warga muslim yang ada di putri hijau sehingga masjid ini menjadi pusat ibadah agama muslim di perumahan putri hijau.</p>
                         <!-- <a class="sc1-btn" href="">Konsultasi</a> -->
                         <!-- <a class="sc1-btn-outline" href="">Lihat karya kami</a> -->
                     </div>
-                    <div class="col-lg-6" data-aos="fade-left" data-aos-delay="900">
+                    <div class="col-lg-6" >
                         <img class="img-responsive img-brd"src="img/img_1.jpg" alt="">
                     </div>
             </div>
         </div>
     </section>
-    <section class="sc-2 mr-topmin-200" data-aos="fade-up" data-aos-offset="400" >
+    <section class="sc-2 mr-topmin-200"  id="sc2">
       <div class="container">
         <div class="row mr-btm-40">
           <div class="col-lg-12 mr-top-250">
@@ -167,14 +167,14 @@ semisal shalat gerhana, tarawih, istisqa, shalat Id, dan sholat lain dikelola ol
     </div>
     </section>
 <!-- //SECTIOM 3 -->
-    <section class="sc-3 mr-topmin-150 bg-img-sc3">
+    <section class="sc-3 mr-topmin-150 bg-img-sc3" id="sc3">
       <div class="container">
         <div class="row ">
           <div class="col-lg-12 mr-top-250">
               <h2 class="tx-headline clr-dark tx-cntr-xs" data-aos="fade-down" data-aos-offset="200"> Beriita Masjid</h2>
           </div>
           <div class="row">
-            <div class=" col-md-6 col-lg-6 d-flex" data-aos="fade-right" data-aos-offset="200" data-aos-delay="400">
+            <div class=" col-md-6 col-lg-6 d-flex" data-aos="fade-up" data-aos-offset="200" >
               <div class="list-kegiatan  flex-fill">
                 <div class="thumbnail">
                     <img src="/img/foto_kegiatan/foto1.jpg" class="small-photo">
@@ -194,7 +194,7 @@ masjid dibuka selama waktu-waktu shalat.  Adapun pelaksanaan shalat sunat berjam
                 </div>
               </div>
             </div>
-            <div class="col-md-6  col-lg-6 " data-aos="fade-left" data-aos-offset="200" data-aos-delay="600">
+            <div class="col-md-6  col-lg-6 " data-aos="fade-up" data-aos-offset="200">
               <div class="row">
 
                 <div class=" col-md-6 col-lg-6 pd-lf-30-xs">
@@ -289,7 +289,7 @@ masjid dibuka selama waktu-waktu shalat.  Adapun pelaksanaan shalat sunat berjam
 
 
     <!-- //SECTIOM 4 -->
-    <section class="sc-4 bg-img-sc4 mr-topmin-50 tx-center-xs">
+    <section class="sc-4 bg-img-sc4 mr-topmin-50 tx-center-xs" id="sc4">
       <div class="container">
         <div class="row ">
           <div class="col-lg-12 mr-top-250-dn">
@@ -297,7 +297,7 @@ masjid dibuka selama waktu-waktu shalat.  Adapun pelaksanaan shalat sunat berjam
           </div>
         </div>
         <div class="row">
-          <div class="col-lg-12 box-donasi" data-aos="flip-down" data-aos-offset="200" data-aos-delay="400">
+          <div class="col-lg-12 box-donasi" data-aos="fade-up" data-aos-offset="200" >
             <div class="row">
               <div class="col-lg-6 col-md-12">
                 <div class="tx-qn tx-center-xs">
@@ -312,7 +312,7 @@ masjid dibuka selama waktu-waktu shalat.  Adapun pelaksanaan shalat sunat berjam
     
                 <button type="button" class="btn btn-def tx-center-xs">Mau Berdonasi</button>
               </div>
-              <div class="col-lg-6 d-none d-lg-block" data-aos="fade-up" data-aos-offset="200" data-aos-delay="1000">
+              <div class="col-lg-6 d-none d-lg-block" data-aos="fade-up" data-aos-offset="200" >
                 <img class="img-responsive img-dn"src="img/img_1.jpg" alt="">
               </div>
             </div>
@@ -388,9 +388,9 @@ masjid dibuka selama waktu-waktu shalat.  Adapun pelaksanaan shalat sunat berjam
                 </p>
               </div>
     
-              <div class="go_top">
+              <!-- <div class="go_top">
                 <span class="icon-arrow-up"></span>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
@@ -406,7 +406,7 @@ masjid dibuka selama waktu-waktu shalat.  Adapun pelaksanaan shalat sunat berjam
     <script>
       AOS.init(
         {
-          offset: 600,
+          offset: 200,
           duration: 1000
         }
       );
