--- a/index.html
+++ b/index.html
@@ -40,17 +40,19 @@
 
 
 
-    <section class="bg-sc1" id="sc1" style="margin-bottom: 250px;">
+    <section class="bg-sc1" id="sc1" ">
         <div class="container">
-            <div class="row section-1 container " data-aos="fade-up">
-                    <div class="col-lg-12 " >
-                        <h1><span class="tx-normal">Hi, I'm Ayyathullah Ahmad!</h1>
+            <div class="row section-1" data-aos="fade-up">
+                    <div class="col-lg-12 ">
+                        <h1><span class="header-bold">Hi, I'm Ayyathullah Ahmad!</h1>
+                          <span class="title">UI/UX Designer</span>
+                        <br><br><br>
                         <!-- <a class="sc1-btn" href="">Konsultasi</a> -->
                         <!-- <a class="sc1-btn-outline" href="">Lihat karya kami</a> -->
                         
                     </div>
-                    <div class="col-lg-8">
-                      <h5 >Passionate in design since 2015, and now focuses on UI/UX design with 2 years experience in mobile apps and web design. have 10 months experience developing several ios application projects and collaborating with the team at Apple Developer Academy Infinite Learning Batam</h5>
+                    <div class="col-lg-8 content">
+                      <span>Passionate in design since 2015, and now focuses on UI/UX design with 2 years experience in mobile apps and web design. have 10 months experience developing several ios application projects and collaborating with the team at Apple Developer Academy Infinite Learning Batam</span>
 
                     </div> 
                     <div class="col-lg-12">
