--- a/index.html
+++ b/index.html
@@ -76,18 +76,33 @@
           </div>
         </div>
         <div class="row box-project">
-          <div class="col-lg-4">
-            <img src="/img/foto_kegiatan/project1.png" class="img-thumbnail" alt="project-meditime">
-          </div>
-          <div class="col-lg-6">
-            <div class="ct-header">Meditime</div>
-            <div class="ct">Aplikasi untuk mengingatkan orang minum obat dan sudah tersedia di App Store.</div>
-            <div class="ct-caption">Agustus - September 2021 (2 Months)</div>
-            <div class="link-action">
-              <a href="https://tungsten-bladder-76e.notion.site/Projek-Meditime-d6d8be954b4a45cd916a9fd5b8dbbd87" class=" " target="_blank">Lihat Project  <i class="bi bi-arrow-right"></i></a>
+            <div class="col-lg-4 ">
+              <img src="/img/foto_kegiatan/project1.png" class="img-thumbnail" alt="project-meditime">
             </div>
-            
-          </div>
+            <div class="col-lg-6">
+              <div class="ct-header">Meditime</div>
+              <div class="ct">Aplikasi untuk mengingatkan orang minum obat dan sudah tersedia di App Store.</div>
+              <div class="ct-caption">Agustus - September 2021 (2 Months)</div>
+              <div class="link-action">
+                <a href="https://tungsten-bladder-76e.notion.site/Projek-Meditime-d6d8be954b4a45cd916a9fd5b8dbbd87" class=" " target="_blank">Lihat Project  <i class="bi bi-arrow-right"></i></a>
+              </div>
+            </div>
+        </div>
+
+          <!-- <div class="row box-project">
+            <div class="col-lg-4 ">
+              <img src="/img/foto_kegiatan/project1.png" class="img-thumbnail" alt="project-meditime">
+            </div>
+            <div class="col-lg-6">
+              <div class="ct-header">Perlu</div>
+              <div class="ct">Aplikasi untuk mengingatkan orang minum obat dan sudah tersedia di App Store.</div>
+              <div class="ct-caption">Oktober - Desember 2021 (3 Months)</div>
+              <div class="link-action">
+                <a href="https://tungsten-bladder-76e.notion.site/Projek-Meditime-d6d8be954b4a45cd916a9fd5b8dbbd87" class=" " target="_blank">Lihat Project  <i class="bi bi-arrow-right"></i></a>
+              </div>
+            </div>
+          </div> -->
+
         </div>
       </div>
     </section>
