--- a/index.html
+++ b/index.html
@@ -44,20 +44,20 @@
 
     <section class="bg-sc1" id="sc1" >
         <div class="container">
-            <div class="row section-1" data-aos="fade-up">
-                    <div class="col-lg-12 ">
-                        <h1><span class="header-bold">Hi, I'm Ayyathullah Ahmad!</h1>
+            <div class="row section-1"  >
+                    <div class="col-lg-12 "  data-aos="fade-up" data-aos-duration="1000">
+                        <h1><span class="header-bold">Hi, I'm Ayyathullah Ahmad!</span></h1>
                           <span class="title">UI/UX Designer</span>
                         <br><br><br>
                         <!-- <a class="sc1-btn" href="">Konsultasi</a> -->
                         <!-- <a class="sc1-btn-outline" href="">Lihat karya kami</a> -->
                         
                     </div>
-                    <div class="col-lg-8 content mr-bt-32">
+                    <div class="col-lg-6 content mr-bt-32"  data-aos="fade-up" data-aos-duration="1200" data-aos-delay="300">
                       <span>Passionate in design since 2015, and now focuses on UI/UX design with 2 years experience in mobile apps and web design. have 10 months experience developing several ios application projects and collaborating with the team at Apple Developer Academy Infinite Learning Batam</span>
 
                     </div> 
-                    <div class="col-lg-12">
+                    <div class="col-lg-12" data-aos="fade-up"  data-aos-delay="500">
                       <a href="https://www.linkedin.com/in/ayyathullahahmad/" class="btn btn-primary btn-lg rect-icon-linkedin" role="button" aria-pressed="true" target="_blank"><i class="bi bi-linkedin"></i></a>
                       <a href="https://wa.me/6282181293478" class="btn btn-primary btn-lg rect-icon-wa" role="button" aria-pressed="true" target="_blank"><i class="bi bi-whatsapp"></i></a>
                     </div>
@@ -70,12 +70,25 @@
 
     <section class="sc-2" id="sc2">
       <div class="container ">
-        <div class="row">
-          <div class="col-lg-12 mr-tp-32 title-sc2">
-            <h1><span class="header-bold  ">Latest Project</h1>
+        <div class="row" data-aos="fade-up">
+          <div class="col-lg-12 mr-tp-32 title-sc2" >
+            <span class="title ">Latest Project</span>
           </div>
         </div>
-        <div class="row box-project">
+        <div class="row">
+          <div class="col-lg-12" data-aos="fade-up">
+            <a href="https://tungsten-bladder-76e.notion.site/Projek-Meditime-d6d8be954b4a45cd916a9fd5b8dbbd87" target="_blank">
+              <img src="/img/foto_kegiatan/project1.png" class="img-thumbnail im-project" alt="project-meditime">
+            </a>
+            <span class="ct-caption"> #UserResearcher #ProductDesigner #UsabilityTesting</span>
+            <div class="ct">Meditime</div>
+            <div class="mr-tp-8">
+              <button type="button" class="btn btn-link btn-link-custom mr-rg-16"><i class="bi bi-arrow-up-right-square-fill"></i> View Study Case</button>   
+              <button type="button" class="btn btn-link btn-link-custom"><i class="bi bi-apple"></i> Download in App Store</button>
+            </div>
+          </div>
+        </div>
+        <!-- <div class="row box-project">
             <div class="col-lg-4 ">
               <img src="/img/foto_kegiatan/project1.png" class="img-thumbnail" alt="project-meditime">
             </div>
@@ -87,7 +100,7 @@
                 <a href="https://tungsten-bladder-76e.notion.site/Projek-Meditime-d6d8be954b4a45cd916a9fd5b8dbbd87" class=" " target="_blank">Lihat Project  <i class="bi bi-arrow-right"></i></a>
               </div>
             </div>
-        </div>
+        </div> -->
 
           <!-- <div class="row box-project">
             <div class="col-lg-4 ">
