--- a/index.html
+++ b/index.html
@@ -83,8 +83,9 @@
             <span class="ct-caption"> #UserResearcher #ProductDesigner #UsabilityTesting</span>
             <div class="ct">Meditime</div>
             <div class="mr-tp-8">
-              <button type="button" class="btn btn-link btn-link-custom mr-rg-16"><i class="bi bi-arrow-up-right-square-fill"></i> View Study Case</button>   
-              <button type="button" class="btn btn-link btn-link-custom"><i class="bi bi-apple"></i> Download in App Store</button>
+              <a href="https://tungsten-bladder-76e.notion.site/Projek-Meditime-d6d8be954b4a45cd916a9fd5b8dbbd87" class="btn btn-link btn-link-custom mr-rg-16" role="button" aria-pressed="true" target="_blank"><i class="bi bi-arrow-up-right-square-fill"></i> View Study Case</a>
+              <a href="https://apps.apple.com/us/app/meditime/id1579997303#?platform=iphone" class="btn btn-link btn-link-custom mr-rg-16" role="button" aria-pressed="true" target="_blank"><i class="bi bi-apple"></i> Download in App Store</a>
+              
             </div>
           </div>
         </div>
