--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <!-- My CSS -->
-<link rel="stylesheet" href="scss/main.css?ver=5">
+<link rel="stylesheet" href="scss/main.css?ver=6">
 <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
     
@@ -75,7 +75,23 @@
             <span class="title ">Latest Project</span>
           </div>
         </div>
-        <div class="row">
+        <!-- Perlu Project -->
+        <div class="row ">
+          <div class="col-lg-12" data-aos="fade-up">
+            <a href="https://tungsten-bladder-76e.notion.site/PerLu-Periksa-Dulu-be409f2458a7495a95fe7dfc90f64d2b" target="_blank">
+              <img src="/img/foto_kegiatan/project2.png" class="img-thumbnail im-project" alt="project-meditime">
+            </a>
+            <span class="ct-caption"> #UserResearcher #ProductDesigner #UsabilityTesting</span>
+            <div class="ct">Perlu <span class="ct-caption"> (On Progress Documentation)</span> </div>
+            <div class="mr-tp-8">
+              <a href="https://tungsten-bladder-76e.notion.site/PerLu-Periksa-Dulu-be409f2458a7495a95fe7dfc90f64d2b" class="btn btn-link btn-link-custom mr-rg-16" role="button" aria-pressed="true" target="_blank"><i class="bi bi-arrow-up-right-square-fill"></i> View Study Case</a>
+              <a href="https://apps.apple.com/id/app/perlu/id1595392729" class="btn btn-link btn-link-custom mr-rg-16" role="button" aria-pressed="true" target="_blank"><i class="bi bi-apple"></i> Download in App Store</a>
+              
+            </div>
+          </div>
+        </div>
+        <!-- Meditime Project -->
+        <div class="row mr-tp-64">
           <div class="col-lg-12" data-aos="fade-up">
             <a href="https://tungsten-bladder-76e.notion.site/Projek-Meditime-d6d8be954b4a45cd916a9fd5b8dbbd87" target="_blank">
               <img src="/img/foto_kegiatan/project1.png" class="img-thumbnail im-project" alt="project-meditime">
