--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
               <img src="/img/foto_kegiatan/project2.png" class="img-thumbnail im-project" alt="project-meditime">
             </a>
             <span class="ct-caption"> #UserResearcher #ProductDesigner #UsabilityTesting</span>
-            <div class="ct">Perlu <span class="ct-caption"> (On Progress Documentation)</span> </div>
+            <div class="ct">Perlu  </div>
             <div class="mr-tp-8">
               <a href="https://tungsten-bladder-76e.notion.site/PerLu-Periksa-Dulu-be409f2458a7495a95fe7dfc90f64d2b" class="btn btn-link btn-link-custom mr-rg-16" role="button" aria-pressed="true" target="_blank"><i class="bi bi-arrow-up-right-square-fill"></i> View Study Case</a>
               <a href="https://apps.apple.com/id/app/perlu/id1595392729" class="btn btn-link btn-link-custom mr-rg-16" role="button" aria-pressed="true" target="_blank"><i class="bi bi-apple"></i> Download in App Store</a>
