--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
             <a href="https://tungsten-bladder-76e.notion.site/PerLu-Periksa-Dulu-be409f2458a7495a95fe7dfc90f64d2b" target="_blank">
               <img src="/img/foto_kegiatan/project2.png" class="img-thumbnail im-project" alt="project-meditime">
             </a>
-            <span class="ct-caption"> #UserResearcher #ProductDesigner #UsabilityTesting</span>
-            <div class="ct">Perlu  </div>
+            <span class="ct-caption"> #DesignThinking #UXResearch #UIDesign #UsabilityTesting</span>
+            <div class="ct">PerLu  </div>
             <div class="mr-tp-8">
               <a href="https://tungsten-bladder-76e.notion.site/PerLu-Periksa-Dulu-be409f2458a7495a95fe7dfc90f64d2b" class="btn btn-link btn-link-custom mr-rg-16" role="button" aria-pressed="true" target="_blank"><i class="bi bi-arrow-up-right-square-fill"></i> View Study Case</a>
               <a href="https://apps.apple.com/id/app/perlu/id1595392729" class="btn btn-link btn-link-custom mr-rg-16" role="button" aria-pressed="true" target="_blank"><i class="bi bi-apple"></i> Download in App Store</a>
@@ -98,7 +98,7 @@
             <a href="https://tungsten-bladder-76e.notion.site/Projek-Meditime-d6d8be954b4a45cd916a9fd5b8dbbd87" target="_blank">
               <img src="/img/foto_kegiatan/project1.png" class="img-thumbnail im-project" alt="project-meditime">
             </a>
-            <span class="ct-caption"> #UserResearcher #ProductDesigner #UsabilityTesting</span>
+            <span class="ct-caption"> #DesignThinking #UIDesign #UsabilityTesting</span>
             <div class="ct">Meditime</div>
             <div class="mr-tp-8">
               <a href="https://tungsten-bladder-76e.notion.site/Projek-Meditime-d6d8be954b4a45cd916a9fd5b8dbbd87" class="btn btn-link btn-link-custom mr-rg-16" role="button" aria-pressed="true" target="_blank"><i class="bi bi-arrow-up-right-square-fill"></i> View Study Case</a>
