--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="User Interface Designer based in Batam">
+    <meta name="description" content="Product Designer based in Batam">
     <meta name="author" content="Ayyathullah ahmad">
     <link rel="icon" href="img/favicon.png">
     <!-- Bootstrap CSS -->
