--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div class="row section-1"  >
                     <div class="col-lg-12 "  data-aos="fade-up" data-aos-duration="1000">
                         <h1><span class="header-bold">Hi, I'm Ayyathullah Ahmad!</span></h1>
-                          <span class="title">UI/UX Designer</span>
+                          <span class="title">Product Designer</span>
                         <br><br><br>
                         <!-- <a class="sc1-btn" href="">Konsultasi</a> -->
                         <!-- <a class="sc1-btn-outline" href="">Lihat karya kami</a> -->
