gas update blog

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <!-- My CSS -->
-<link rel="stylesheet" href="scss/main.css?ver=8">
+<link rel="stylesheet" href="scss/main.css?ver=9">
 <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
     
     <title>Ayyathullah Ahmad</title>
   </head>
-  <body>
+  <body class="image-bg-home">
     <div class="container">
         <nav class="navbar navbar-expand-lg my-3">
             <!-- <a class="navbar-brand" href="#" style="display: contents;"><img src="img/logo.png" alt="Logo Masjid" class="logo-xs"></a> -->
@@ -32,6 +32,7 @@
               <div class="navbar-nav">
                 <a class="nav-item nav-link active" href="#sc1">Home </a>
                 <a class="nav-item nav-link" href="#sc2">Project</a>
+                <a class="nav-item nav-link" href="/Blog.html">Blog</a>
                 <!-- <a class="nav-item nav-link" href="#sc3">Berita</a>
                 <a class="nav-item nav-link " href="#sc4">Donasi</a> -->
               </div>
