update blog to artilce and etc

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
               <div class="navbar-nav">
                 <a class="nav-item nav-link active" href="#sc1">Home </a>
                 <a class="nav-item nav-link" href="#sc2">Project</a>
-                <a class="nav-item nav-link" href="/Blog.html">Blog</a>
+                <a class="nav-item nav-link" href="https://medium.com/@ayyathullahahmad" target="_blank">Article</a>
                 <!-- <a class="nav-item nav-link" href="#sc3">Berita</a>
                 <a class="nav-item nav-link " href="#sc4">Donasi</a> -->
               </div>
@@ -147,19 +147,19 @@
       <div class="container ">
         <div class="row" data-aos="fade-down">
           <div class="col-lg-12 " >
-            <div class="ct">Landing Page Exploration</div>
+            <div class="ct">WFI Revamp Website</div>
           </div>
           
         </div>
         <div class="row justify-content-between mr-tp-8" data-aos="fade-down" >
           <div class="col-lg-6 " >
-            <span>I am the designer for the Indoperkasa Work Force website redesign project.
-               My role involves auditing the old design, understanding the new company's profile, 
+            <span>I am the designer for the Work Force Indoperkasa website redesign project.
+               My role as product Designer involves auditing the old design, understanding the new company's profile, 
                creating wireframes, discussing with programmer, designing the final look, delivering it 
                to the programmer, and checking the implementation before sending it to the client.</span>
           </div>
           <div class="col-lg-2 " >
-            <a href="www.wfi.com" class="btn btn-link btn-link-custom mr-rg-16" role="button" aria-pressed="true" target="_blank"><i class="bi bi-arrow-up-right-square-fill"></i> Go to Live Website</a>
+            <a href="https://www.wfi.co.id/" class="btn btn-link btn-link-custom mr-rg-16" role="button" aria-pressed="true" target="_blank"><i class="bi bi-arrow-up-right-square-fill"></i> Go to Live Website</a>
           </div>
         </div>
         
