--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <!-- My CSS -->
-<link rel="stylesheet" href="scss/main.css?ver=10">
+<link rel="stylesheet" href="scss/main.css?ver=11">
 <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
     
@@ -198,8 +198,9 @@
 <section class="sc-4" id="sc4">
     <div class="container-fluid">
       <div class="row">
-        <div class="col-lg-4 col-sm-12">
-          <img src="/img/foto_kegiatan/img-3.png" class="img-fluid mr-tp-8 mr-bt-8" alt="Responsive image" data-aos="fade-up" data-aos-delay="0">
+        <div class="col-lg-4 col-sm-12 ">
+          <img src="/img/Website1.gif" class="img-fluid mr-tp-8 mr-bt-8 br-rad-8 " alt="Responsive image" data-aos="fade-up" data-aos-delay="0" >
+          <!-- <img src="/img/foto_kegiatan/img-3.png" class="img-fluid mr-tp-8 mr-bt-8" alt="Responsive image" data-aos="fade-up" data-aos-delay="0"> -->
         </div>
         <div class="col-lg-4 col-sm-12">
           <img src="/img/foto_kegiatan/img-2.png" class="img-fluid mr-tp-8 mr-bt-8" alt="Responsive image" data-aos="fade-up" data-aos-delay="200">
