--- a/index.html
+++ b/index.html
@@ -199,16 +199,16 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-lg-4 col-sm-12 ">
-          <img src="/img/Website1.gif" class="img-fluid mr-tp-8 mr-bt-8 br-rad-8 " alt="Responsive image" data-aos="fade-up" data-aos-delay="0" >
-          <!-- <img src="/img/foto_kegiatan/img-3.png" class="img-fluid mr-tp-8 mr-bt-8" alt="Responsive image" data-aos="fade-up" data-aos-delay="0"> -->
+          <!-- <img src="/img/Website1.gif" class="img-fluid mr-tp-8 mr-bt-8 br-rad-8 " alt="Responsive image" data-aos="fade-up" data-aos-delay="0" > -->
+          <img src="/img/foto_kegiatan/img-3.png" class="img-fluid mr-tp-8 mr-bt-8" alt="Responsive image" data-aos="fade-up" data-aos-delay="0">
         </div>
         <div class="col-lg-4 col-sm-12">
-          <img src="/img/Website2.gif" class="img-fluid mr-tp-8 mr-bt-8 br-rad-8 " alt="Responsive image" data-aos="fade-up" data-aos-delay="0" >
-          <!-- <img src="/img/foto_kegiatan/img-2.png" class="img-fluid mr-tp-8 mr-bt-8" alt="Responsive image" data-aos="fade-up" data-aos-delay="200"> -->
+          <!-- <img src="/img/Website2.gif" class="img-fluid mr-tp-8 mr-bt-8 br-rad-8 " alt="Responsive image" data-aos="fade-up" data-aos-delay="0" > -->
+          <img src="/img/foto_kegiatan/img-2.png" class="img-fluid mr-tp-8 mr-bt-8" alt="Responsive image" data-aos="fade-up" data-aos-delay="200">
         </div>
         <div class="col-lg-4 col-sm-12">
-          <img src="/img/Website3.gif" class="img-fluid mr-tp-8 mr-bt-8 br-rad-8 " alt="Responsive image" data-aos="fade-up" data-aos-delay="0" >
-          <!-- <img src="/img/foto_kegiatan/img-1.png" class="img-fluid mr-tp-8 mr-bt-8" alt="Responsive image" data-aos="fade-up" data-aos-delay="400"> -->
+          <!-- <img src="/img/Website3.gif" class="img-fluid mr-tp-8 mr-bt-8 br-rad-8 " alt="Responsive image" data-aos="fade-up" data-aos-delay="0" > -->
+          <img src="/img/foto_kegiatan/img-1.png" class="img-fluid mr-tp-8 mr-bt-8" alt="Responsive image" data-aos="fade-up" data-aos-delay="400">
         </div>
       </div>
     </div>
@@ -262,7 +262,7 @@
                   <h4 class="footer-widget-title">Contact Me</h4>
                   <ul>
                     <li>
-                      <a href="https://www.linkedin.com/in/ayyathullahahmad/">linkedin</a>
+                      <a href="https://www.linkedin.com/in/ayyathullahahmad/">Linkedin</a>
                     </li>
                     <li>
                       <a href="https://wa.me/6282181293478">Whatsapp</a>
