update css and update logo perlu

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <!-- My CSS -->
-<link rel="stylesheet" href="scss/main.css?ver=13">
+<link rel="stylesheet" href="scss/main.css?ver=14">
 <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
     
@@ -135,7 +135,7 @@
           <div class="card-image card-image-2">
             <div class="card-img-overlay">
               <!-- <h5 class="card-title">Card title</h5> -->
-              <img src="img/LogoPerlu.png" alt="meditime logo" class="img-thumbnail">
+              <img src="img/logoPerlu.png" alt="meditime logo" class="img-thumbnail">
               <p class="card-text">An application to check hoax information circulating on Whatsapp and is available on App Store.</p>
               <a href="https://tungsten-bladder-76e.notion.site/PerLu-Periksa-Dulu-be409f2458a7495a95fe7dfc90f64d2b" class="link-anim"><img src="img/Link.svg" alt="link" ></a>
             </div>
