--- a/index.html
+++ b/index.html
@@ -119,6 +119,31 @@
             <span class="title ">Latest Project</span>
           </div>
         </div>
+        <!-- Dashboard Project -->
+        <div class="card bg-port-4" data-aos="fade-up">
+          <div class="card-image card-image-4">
+            <div class="card-img-overlay">
+              <!-- <h5 class="card-title">Card title</h5> -->
+              <!-- <img src="img/logoPerlu.png" alt="meditime logo" class="img-thumbnail"> -->
+              <h3>Convert PDF Report to Mobile Report</h3>
+              <p class="card-text">Ensures that users can easily access and read nutrition report results in a mobile-friendly format.</p>
+              <a href="/CaseStudy/Nutri.html" class="link-anim" target="_blank"><img src="img/Link.svg" alt="link" target="_blank" ></a>
+            </div>
+          </div>
+        </div>
+        <!-- Dashboard Project -->
+        <div class="card bg-port-3" data-aos="fade-up">
+          <div class="card-image card-image-3">
+            <div class="card-img-overlay">
+              <!-- <h5 class="card-title">Card title</h5> -->
+              <!-- <img src="img/logoPerlu.png" alt="meditime logo" class="img-thumbnail"> -->
+              <h3>Effectiveness Creating Account on Dashboard</h3>
+              <p class="card-text">Facilitating a seamless account creation process on the dashboard to expedite B2B business approaches.</p>
+              <p class="card-text"><em>On Progress</em> </p>
+              <!-- <a href="/CaseStudy/CreateAccount.html" class="link-anim" target="_blank"><img src="img/Link.svg" alt="link" ></a> -->
+            </div>
+          </div>
+        </div>
         <!-- Meditime Project -->
         <div class="card bg-port-1" data-aos="fade-up">
           <div class="card-image card-image-1">
@@ -126,7 +151,7 @@
               <!-- <h5 class="card-title">Card title</h5> -->
               <img src="img/medlogo.png" alt="meditime logo" class="img-thumbnail">
               <p class="card-text">An application to remind people to take medicine and is available on App Store.</p>
-              <a href="https://tungsten-bladder-76e.notion.site/Projek-Meditime-d6d8be954b4a45cd916a9fd5b8dbbd87" class="link-anim"><img src="img/Link.svg" alt="link" ></a>
+              <a href="https://tungsten-bladder-76e.notion.site/Projek-Meditime-d6d8be954b4a45cd916a9fd5b8dbbd87" class="link-anim" target="_blank"><img src="img/Link.svg" alt="link" ></a>
             </div>
           </div>
         </div>
@@ -137,10 +162,20 @@
               <!-- <h5 class="card-title">Card title</h5> -->
               <img src="img/logoPerlu.png" alt="meditime logo" class="img-thumbnail">
               <p class="card-text">An application to check hoax information circulating on Whatsapp and is available on App Store.</p>
-              <a href="https://tungsten-bladder-76e.notion.site/PerLu-Periksa-Dulu-be409f2458a7495a95fe7dfc90f64d2b" class="link-anim"><img src="img/Link.svg" alt="link" ></a>
+              <a href="https://tungsten-bladder-76e.notion.site/PerLu-Periksa-Dulu-be409f2458a7495a95fe7dfc90f64d2b" class="link-anim" target="_blank"><img src="img/Link.svg" alt="link" target="_blank"></a>
             </div>
           </div>
         </div>
+        <!-- <div class="card bg-port-2" data-aos="fade-up">
+          <div class="card-image card-image-2">
+            <div class="card-img-overlay">
+              <img src="img/logoPerlu.png" alt="meditime logo" class="img-thumbnail">
+              <p class="card-text">An application to check hoax information circulating on Whatsapp and is available on App Store.</p>
+              <a href="/CaseStudy/Meditime.html" class="link-anim"><img src="img/Link.svg" alt="link" target="_blank"></a>
+            </div>
+          </div>
+        </div> -->
+        
         <!-- Perlu Project -->
         <!-- <div class="row ">
           <div class="col-lg-12" data-aos="fade-up">
