update wrong text, and back home button

--- a/CaseStudy/Nutri.html
+++ b/CaseStudy/Nutri.html
@@ -81,7 +81,7 @@
                         <!-- <h5 class="text-center mt-4">50% of people do not take the Medicine properly</h5>
                         <p class="text-center"><i>Source: www.verywellhealth.com</i></p> -->
                         <div class="mt-4">
-                            <p class="lh-base mt-4">We have genetic test results in PDF format. To make it easier for users to read dynamically, we have the task of converting genetic test results from PDF to mobile format.</p>
+                            <p class="lh-base mt-4">We have genetic test results in PDF format. To make it easier for users to read dynamically, we converting genetic test results from PDF to mobile format.</p>
                             <img src="/img/StudyCase/Nutri/pdftomobile.png" class="mt-4 rounded img-fluid" alt="PDF to Mobile">
                         </div>
                     </div>
@@ -96,9 +96,9 @@
                         <!-- <h5 class="text-center mt-4">50% of people do not take the Medicine properly</h5>
                         <p class="text-center"><i>Source: www.verywellhealth.com</i></p> -->
                         <div class="mt-4">
-                            <p class="lh-base">In PDF format, all content can be placed as it has ample space. Therefore, we need to know how users read and prioritize information in a mobile app. Here are some questions that I have in mind:</p>
+                            <p class="lh-base">In PDF format, all content can be placed as it has more space. Therefore, we need to know how users read and prioritize the information in a mobile app. Here are some questions that I have :</p>
                             <ul class="h6 ">
-                                <li>What are the user's reading habits when it comes to reading reports in PDF format? As PDFs often have multiple sections, ranging from Micronutrient to Meals Plan.</li>
+                                <li>How the user's reading habits when reading the reports in PDF format? </li>
                                 <li>What is the first thing users want to know when they see a report?</li>
                             </ul>  
                         </div>
@@ -118,7 +118,7 @@
                             
                               <div class="alert alert-light d-flex align-items-center h6" role="alert">
                                 <div>
-                                    Most useful information is Summary of nutrient, this page is beneficial for both users because they know what supplements they should take.
+                                    Most useful information is Summary of nutrient, this page is beneficial for users because they know what supplements they should take.
                                 </div>
                               </div>
                         </div>
@@ -134,7 +134,7 @@
                         <p><em>The Context</em></p>
                         <img src="/img/StudyCase/Nutri/strcture.png" class="rounded img-fluid" alt="PDF to Mobile">
                         <div class="mt-4">
-                            <p class="lh-base">In the Report PDF, the possible layout would be as follows, divided into <b>4 sections: Micronutrient, Macronutrient, Food intolerance, and meal plan.</b> Then, each section is further divided into <b>4 parts: lower, higher, influence, and normal to see what is happening in the user's body.</b> </p>
+                            <p class="lh-base">In the Report PDF, the layout is divided into <b>4 sections: Micronutrient, Macronutrient, Food intolerance, and meal plan.</b> Then, each section is further divided into <b>4 parts: lower, higher, influence, and normal based on the user's body.</b> </p>
                             <p class="lh-base">In the report, this is the most important page as it serves as the initial page that explains the other pages within it. <b>Therefore, I will try to explain the process of designing this page only.</b></p>
                         </div>
                         <div class="py-3">
@@ -266,10 +266,10 @@
             <div class="container">
                 <div class="row justify-content-between mr-tp-8" >
                     <div class="col-lg-6 mb-4" >
-                        <a href="/Index.html" class="btn btn-link btn-link-custom mr-rg-16" role="button" aria-pressed="true" target="_blank"><i class="bi bi-arrow-left-square-fill"></i>Back to Homepage</a>
+                        <a href="/Index.html" class="btn btn-link btn-link-custom mr-rg-16" role="button" aria-pressed="true" ><i class="bi bi-arrow-left-square-fill"></i>Back to Homepage</a>
                     </div>
                     <div class="col-lg-2  mb-2" >
-                    <a href="https://tungsten-bladder-76e.notion.site/Projek-Meditime-d6d8be954b4a45cd916a9fd5b8dbbd87" class="btn btn-link btn-link-custom mr-rg-16" role="button" aria-pressed="true" target="_blank">Another Study Case: Meditime App <i class="bi bi-arrow-up-right-square-fill"></i> </a>
+                    <a href="https://tungsten-bladder-76e.notion.site/Projek-Meditime-d6d8be954b4a45cd916a9fd5b8dbbd87" class="btn btn-link btn-link-custom mr-rg-16" role="button" aria-pressed="true" >Another Study Case: Meditime App <i class="bi bi-arrow-up-right-square-fill"></i> </a>
                     </div>
                 </div>
             </div>
