--- a/CaseStudy/Nutri.html
+++ b/CaseStudy/Nutri.html
@@ -266,7 +266,7 @@
             <div class="container">
                 <div class="row justify-content-between mr-tp-8" >
                     <div class="col-lg-6 mb-4" >
-                        <a href="https://ayyatahmad.com/" class="btn btn-link btn-link-custom mr-rg-16" role="button" aria-pressed="true" ><i class="bi bi-arrow-left-square-fill"></i>Back to Homepage</a>
+                        <a href="https://ayyatahmad.com/Index.html" class="btn btn-link btn-link-custom mr-rg-16" role="button" aria-pressed="true" ><i class="bi bi-arrow-left-square-fill"></i>Back to Homepage</a>
                     </div>
                     <div class="col-lg-2  mb-2" >
                     <a href="https://tungsten-bladder-76e.notion.site/Projek-Meditime-d6d8be954b4a45cd916a9fd5b8dbbd87" class="btn btn-link btn-link-custom mr-rg-16" role="button" aria-pressed="true" >Another Study Case: Meditime App <i class="bi bi-arrow-up-right-square-fill"></i> </a>
