update homepage link

--- a/CaseStudy/Nutri.html
+++ b/CaseStudy/Nutri.html
@@ -33,7 +33,7 @@
                 </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
               <div class="navbar-nav">
-                <a class="nav-item nav-link active" href="/Index.html">Home </a>
+                <a class="nav-item nav-link active" href="www.ayyatahmad.com">Home </a>
                 <!-- <a class="nav-item nav-link" href="#sc2">Project</a> -->
                 <a class="nav-item nav-link" href="https://medium.com/@ayyathullahahmad" target="_blank">Article</a>
                 <!-- <a class="nav-item nav-link" href="#sc3">Berita</a>
@@ -266,7 +266,7 @@
             <div class="container">
                 <div class="row justify-content-between mr-tp-8" >
                     <div class="col-lg-6 mb-4" >
-                        <a href="https://ayyatahmad.com/Index.html" class="btn btn-link btn-link-custom mr-rg-16" role="button" aria-pressed="true" ><i class="bi bi-arrow-left-square-fill"></i>Back to Homepage</a>
+                        <a href="https://ayyatahmad.com/" class="btn btn-link btn-link-custom mr-rg-16" role="button" aria-pressed="true" ><i class="bi bi-arrow-left-square-fill"></i>Back to Homepage</a>
                     </div>
                     <div class="col-lg-2  mb-2" >
                     <a href="https://tungsten-bladder-76e.notion.site/Projek-Meditime-d6d8be954b4a45cd916a9fd5b8dbbd87" class="btn btn-link btn-link-custom mr-rg-16" role="button" aria-pressed="true" >Another Study Case: Meditime App <i class="bi bi-arrow-up-right-square-fill"></i> </a>
@@ -287,10 +287,10 @@
                   <!-- <img src="/img/logo-bgdark.png" alt="" class="img-fluid"> -->
                   <img src="/img/favicon.png">
                   <ul class="contact-details">
-                    <li>
+                    <!-- <li>
                       <span class="icon-earphones"></span> Contact Me:
                       <a href="tel:(+62)821-8129-3478">(+62)821-8129-3478</a>
-                    </li>
+                    </li> -->
                     <li>
                       <span class="icon-envelope-open"></span>
                       <a href="mailto:ayyathullahahmad@gmail.com">ayyathullahahmad@gmail.com</a>
