--- a/CaseStudy/Nutri.html
+++ b/CaseStudy/Nutri.html
@@ -33,7 +33,7 @@
                 </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
               <div class="navbar-nav">
-                <a class="nav-item nav-link active" href="www.ayyatahmad.com">Home </a>
+                <a class="nav-item nav-link active" href="https://ayyatahmad.com/">Home </a>
                 <!-- <a class="nav-item nav-link" href="#sc2">Project</a> -->
                 <a class="nav-item nav-link" href="https://medium.com/@ayyathullahahmad" target="_blank">Article</a>
                 <!-- <a class="nav-item nav-link" href="#sc3">Berita</a>
