adding new study case create acc

--- a/CaseStudy/Nutri.html
+++ b/CaseStudy/Nutri.html
@@ -220,7 +220,7 @@
                             <img src="/img/StudyCase/Nutri/Result.png" class="rounded img-fluid" alt="PDF to Mobile">
                             <div class="text-center"><a href="https://www.figma.com/proto/MjRQfX83oFcZrI1Ua6gHFn/create-account-porto?type=design&node-id=50-28567&t=hFH6Gv60MYslTRiV-1&scaling=min-zoom&page-id=41%3A74299&starting-point-node-id=50%3A28567&mode=design" class="btn btn-link btn-link-custom mr-rg-16" role="button" aria-pressed="true" target="_blank">Testing the Prototype <i class="bi bi-arrow-up-right-square-fill"></i> </a></div>
                             <p class="lh-base mt-4">Based on the results of Usability Testing, we have made some changes according to the feedback. </p>
-                            <p class="lh-base "><i><b>Due to confidentiality issues, we cannot display the results in their entirety.</b></i></p>
+                            <p class="lh-base "><i><b>Due to confidentiality issues, I cannot display the results in their entirety.</b></i></p>
                         </div>
                     </div>
                 </div>
