--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <!-- My CSS -->
-<link rel="stylesheet" href="scss/main.css?ver=16">
+<link rel="stylesheet" href="scss/main.css?ver=17">
 <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
     
@@ -129,6 +129,19 @@
           </div>
         </div>
         <!-- Dashboard Project -->
+        <div class="card bg-port-3" data-aos="fade-up">
+          <div class="card-image card-image-3">
+            <div class="card-img-overlay">
+              <!-- <h5 class="card-title">Card title</h5> -->
+              <!-- <img src="img/logoPerlu.png" alt="meditime logo" class="img-thumbnail"> -->
+              <h3>Effectiveness Creating Account on Dashboard</h3>
+              <p class="card-text">Facilitating a seamless account creation process on the dashboard to expedite B2B business approaches.</p>
+              <!-- <p class="card-text"><em>On Progress</em> </p> -->
+              <a href="/CaseStudy/CreateAccount.html" class="link-anim" target="_blank"><img src="img/Link.svg" alt="link" ></a>
+            </div>
+          </div>
+        </div>
+        <!-- Dashboard Project -->
         <div class="card bg-port-4" data-aos="fade-up">
           <div class="card-image card-image-4">
             <div class="card-img-overlay">
@@ -137,19 +150,6 @@
               <h3>Convert PDF Report to Mobile Report</h3>
               <p class="card-text">Ensures that users can easily access and read nutrition report results in a mobile-friendly format.</p>
               <a href="/CaseStudy/Nutri.html" class="link-anim" target="_blank"><img src="img/Link.svg" alt="link" target="_blank" ></a>
-            </div>
-          </div>
-        </div>
-        <!-- Dashboard Project -->
-        <div class="card bg-port-3" data-aos="fade-up">
-          <div class="card-image card-image-3">
-            <div class="card-img-overlay">
-              <!-- <h5 class="card-title">Card title</h5> -->
-              <!-- <img src="img/logoPerlu.png" alt="meditime logo" class="img-thumbnail"> -->
-              <h3>Effectiveness Creating Account on Dashboard</h3>
-              <p class="card-text">Facilitating a seamless account creation process on the dashboard to expedite B2B business approaches.</p>
-              <p class="card-text"><em>On Progress</em> </p>
-              <!-- <a href="/CaseStudy/CreateAccount.html" class="link-anim" target="_blank"><img src="img/Link.svg" alt="link" ></a> -->
             </div>
           </div>
         </div>
