update link home

--- a/CaseStudy/CreateAccount.html
+++ b/CaseStudy/CreateAccount.html
@@ -42,7 +42,7 @@
                 </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
               <div class="navbar-nav">
-                <a class="nav-item nav-link active" href="/Index.html">Home </a>
+                <a class="nav-item nav-link active" href="https://ayyatahmad.com/">Home </a>
                 <!-- <a class="nav-item nav-link" href="#sc2">Project</a> -->
                 <a class="nav-item nav-link" href="https://medium.com/@ayyathullahahmad" target="_blank">Article</a>
                 <!-- <a class="nav-item nav-link" href="#sc3">Berita</a>
