update link create account, connect to framer wohoo

--- a/index.html
+++ b/index.html
@@ -141,7 +141,9 @@
               <h3>Effectiveness Creating Account on Dashboard</h3>
               <p class="card-text">Facilitating a seamless account creation process on the dashboard to expedite B2B business approaches.</p>
               <!-- <p class="card-text"><em>On Progress</em> </p> -->
-              <a href="/CaseStudy/CreateAccount.html" class="link-anim" ><img src="img/Link.svg" alt="link" ></a>
+              
+              <!-- <a href="/CaseStudy/CreateAccount.html" class="link-anim" ><img src="img/Link.svg" alt="link" ></a> -->
+              <a href="https://ayyat.framer.website/Project/CreateAccount" class="link-anim" ><img src="img/Link.svg" alt="link" ></a>
             </div>
           </div>
         </div>
