update fix widht and navbar

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
               <div class="navbar-nav">
                 <a class="nav-item nav-link active" href="">Home </a>
-                <a class="nav-item nav-link" href="#sc2">Project</a>
+                <a class="nav-item nav-link" href="#sc3">Project</a>
                 <a class="nav-item nav-link" href="https://medium.com/@ayyathullahahmad" target="_blank">Article</a>
                 <!-- <a class="nav-item nav-link" href="#sc3">Berita</a>
                 <a class="nav-item nav-link " href="#sc4">Donasi</a> -->
@@ -121,8 +121,7 @@
           </a>
     </section>
     <section class="sc-card">
-      <div class="">
-        <div class="row" data-aos="fade-up">
+        <div data-aos="fade-up">
           <div class="py-5">
             <!-- <img src="/img/card.png" class="img-fluid d-none d-lg-block" alt="Spoiler work from"> -->
             <img src="/img/case-img.webp" class="img-fluid d-none d-lg-block" alt="Spoiler work from">
@@ -136,7 +135,6 @@
 
           </div>
         </div>
-      </div>
 
     </section>
     <!-- <section class="sc-2" id="sc2"> -->
