remove link framer

--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
           <span>Facilitating a seamless account creation process on the dashboard to expedite B2B business approaches.</span>
         </div>
         <div class="col-lg-2 " >
-          <a href="https://ayyat.framer.website/Project/CreateAccount" class="btn btn-link btn-link-custom " role="button" aria-pressed="true" ><i class="bi bi-arrow-up-right-square-fill"></i> View Details </a>
+          <!-- <a href="https://ayyat.framer.website/Project/CreateAccount" class="btn btn-link btn-link-custom " role="button" aria-pressed="true" ><i class="bi bi-arrow-up-right-square-fill"></i> View Details </a> -->
           <a href="CaseStudy/CreateAccount.html" class="btn btn-link btn-link-custom " role="button" aria-pressed="true" ><i class="bi bi-arrow-up-right-square-fill"></i> View Details </a>
         </div>
       </div>
