update create account based on feedback

--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
     <div class="container card-case ">
       <div class="row" data-aos="fade-down">
         <div class="col-lg-12 " >
-          <div class="ct">Effectiveness Creating Account on Dashboard</div>
+          <div class="ct">Improving Effectiveness Creating Accounts on the Dashboard</div>
         </div>
         
       </div>
