update homeapge and nutri case study

--- a/CaseStudy/CreateAccount.html
+++ b/CaseStudy/CreateAccount.html
@@ -625,7 +625,7 @@
     <div class="container card-case ">
       <div class="row" data-aos="fade-down">
         <div class="col-lg-12 " >
-          <div class="ct">Convert PDF Report to Mobile Report</div>
+          <div class="ct">Helping users access their nutrition data more easily on the NalaGenetics App.</div>
         </div>
         
       </div>
